[package]
name = "ragalgame_exec"
version = "0.3.0"
description = "A Tauri App"
authors = ["lzh"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ragalgame_exec"
crate-type = ["dylib"]

# [[bin]]
# name = "ragalgame_exec"
# path = "src/lib.rs"


[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ 
    "window-close", "path-all", 
    "protocol-all", "shell-open", 
    "icon-ico", "devtools",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.31"

ragal_parser = { path = "../lib-rs/ragal_parser" }


[dependencies.windows]
version = "0.56"
features = [ "Win32_Foundation", "Win32_UI_WindowsAndMessaging",]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
