[package]
name = "ragal_parser"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ragal_parser"
# crate-type=["dylib", "rlib"]

[dependencies]
comrak = "0.20.0"
serde = {version = "1.0.*", features = ["derive"]}
serde_json = "1.0.111"
serde_yaml = "0.9.30"

[profile.release]
# panic = "abort"
strip = true
lto = true
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3